--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
 
 
 
-    <science.hzl.random.RestaurantListView
+    <ListView
         android:id="@+id/checkbox_listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -65,5 +65,11 @@
         android:background="@drawable/star_button"
         android:layout_alignBottom="@+id/random_choose"
         android:layout_centerHorizontal="true"/>
+
+    <at.markushi.ui.RevealColorView
+        android:id="@+id/reveal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFA726"/>
 
 </RelativeLayout>
