--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,36 +9,47 @@
         android:id="@+id/reveal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"/>
+        android:background="@android:color/transparent"/>
 
     <ListView
         android:id="@+id/checkbox_listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_margin="4dp"
-        android:background="@android:color/white"/>
+        style="@style/Listview"/>
 
     <ListView
         android:id="@+id/circle_listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_margin="4dp"/>
+        android:layout_margin="4dp"
+        style="@style/Listview"/>
 
     <ListView
         android:id="@+id/place_listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_margin="4dp"/>
+        android:layout_margin="4dp"
+        style="@style/Listview"/>
+
+    <ListView
+        android:id="@+id/star_listview"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="4dp"
+        android:background="#FFA726"/>
+
     <TextView
         android:id="@+id/result_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="false"
         android:text="@string/none"
+        android:background="@android:color/transparent"
         android:textSize="40sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:textColor="@android:color/holo_red_dark"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:textColor="@android:color/white"/>
     <Button
         android:id="@+id/random_choose"
         android:layout_width="wrap_content"
@@ -49,8 +60,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_margin="16dp"
         android:background="@drawable/random_button"
-        android:tag="#F5A32E"
-        android:text="随机选择"/>
+        android:tag="#FFA726"
+        android:text="吃什么?"/>
 
     <Button
         android:layout_marginRight="30dp"
@@ -64,6 +75,7 @@
         android:layout_alignEnd="@+id/random_choose"/>
 
     <Button
+        android:tag="#FFA726"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/get_star_button"
