--- a/app/src/main/res/layout/button_layout.xml
+++ b/app/src/main/res/layout/button_layout.xml
@@ -5,9 +5,11 @@
               android:layout_height="match_parent"
               android:layout_marginBottom="30dp"
               android:layout_marginTop="30dp"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              style="@style/Listview">
 
     <Button
+        style="@style/Listview"
         android:id="@+id/listview_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
